ZGC large pages analysis.